environments/dev/apps/app-test-application/services/test-application/base/config/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: test-application
    app.kubernetes.io/part-of: app-test-application
  name: test-application
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: test-application
      app.kubernetes.io/part-of: app-test-application
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: test-application
        app.kubernetes.io/part-of: app-test-application
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: test-application
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
