environments/dev/apps/app-test-application/services/test-application/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: test-application
    app.kubernetes.io/part-of: app-test-application
  name: test-application
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: test-application
    app.kubernetes.io/part-of: app-test-application
status:
  loadBalancer: {}
