environments/dev/apps/app-test-application/services/test-application/base/config/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: test-application
  namespace: dev
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: test-application
    weight: 100
  wildcardPolicy: None
